crates/tele-macros/tests/ui/fail/invalid_command_name.rs
use tele_macros::BotCommands as DeriveBotCommands;

#[derive(DeriveBotCommands)]
enum InvalidCommandName {
    #[command(rename = "bad-name", description = "invalid command")]
    BadName,
}

fn main() {}
